# cortexdb

./: .gitignore  Cargo.toml  CoretexDB任务明细.txt  README.md  README_CN.md  VERSIONS.md  build.rs
.github/workflows/: Ci.yaml  docker.yml  python.yml  rust.yml  security.yml
SDK/cpp/coretexdb/: CMakeLists.txt
SDK/cpp/coretexdb/examples/: basic.cpp
SDK/cpp/coretexdb/include/coretexdb/: client.hpp  models.hpp
SDK/cpp/coretexdb/src/: client.cpp  models.cpp
SDK/go/coretexdb/: async_client.go  client.go  go.mod  models.go
SDK/go/coretexdb/examples/: basic.go
SDK/java/coretexdb/: pom.xml
SDK/java/coretexdb/src/main/java/com/coretexdb/: CoretexDBClient.java
SDK/java/coretexdb/src/main/java/com/coretexdb/examples/: BasicExample.java
SDK/java/coretexdb/src/main/java/com/coretexdb/models/: Models.java
SDK/node/coretexdb/: package.json  tsconfig.json
SDK/node/coretexdb/examples/: basic.ts
SDK/node/coretexdb/src/: client.ts  index.ts  models.ts
deploy/ansible/inventory/: production.ini
deploy/ansible/playbooks/: install.yml
deploy/ansible/templates/: cortex.service.j2
deploy/cicd/github-actions/: deploy.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/docker/grafana/provisioning/dashboards/: coretexdb-overview.json
deploy/docker/prometheus/: alerts.yml  prometheus.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/coretexdb/: Chart.yaml  values.prod.yaml  values.yaml
deploy/k8s/: deployment.yaml  service.yaml
deploy/kubernetes/: deployment.ha.yaml  deployment.yaml  namespace.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
experiments/edge_computing/: edge_computing.rs  mod.rs
experiments/federated_learning/: federated_learning.rs  mod.rs
experiments/hybrid_search/: hybrid_search.rs
experiments/privacy_computing/: mod.rs
observability/metrics/: grafana-dashboard.json  prometheus.yml
python/coretexdb/: __init__.py  client.py  core.py  version.py
python/coretexdb/integrations/: __init__.py  huggingface.py  langchain.py  openai.py
python/coretexdb/protocol/: __init__.py
src/: lib.rs  main.rs
src/ai/: autotune.rs  benchmarks.rs  edge_computing.rs  embedding.rs  expression.rs  federated_learning.rs  hybrid_search.rs  intelligent_features.rs  jit_compiler.rs  mod.rs  model_repository.rs  performance.rs  privacy_computing.rs
src/api/: mod.rs
src/api/graphql/: mod.rs  server.rs
src/api/grpc/: mod.rs  server.rs
src/api/pg/: mod.rs  parser.rs  protocol.rs  server.rs
src/api/rest/: handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs
src/cache/: cache.rs
src/clustering/: ann.rs  birch.rs  mod.rs  streaming_kmeans.rs
src/compute/: gpu.rs  gpu_cuda.rs  mod.rs  runtime.rs  simd.rs  udf.rs  wasm_sandbox.rs
src/coordinator/: election.rs  mod.rs
src/core/: buffer_pool.rs  catalog.rs  mod.rs  session.rs
src/coretex_api/: mod.rs
src/coretex_api/grpc/: generated.rs  mod.rs  server.rs
src/coretex_api/grpc/proto/: coretexdb.proto
src/coretex_api/python/: client.rs  mod.rs  types.rs  utils.rs
src/coretex_api/rest/: handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs
src/coretex_backup/: backup.rs  mod.rs  replication.rs  restore.rs
src/coretex_cli/: commands.rs  mod.rs  parser.rs  utils.rs
src/coretex_core/: config.rs  error.rs  mod.rs  schema.rs  types.rs
src/coretex_distributed/: cluster.rs  coordinator.rs  metadata.rs  mod.rs  sharding.rs
src/coretex_index/: brute_force.rs  compression.rs  diskann.rs  hnsw.rs  incremental.rs  manager.rs  mod.rs  scalar.rs  tests.rs  vector.rs
src/coretex_monitor/: alerts.rs  dashboard.rs  health.rs  logs.rs  metrics.rs  mod.rs
src/coretex_perf/: cache.rs  mod.rs  optimization.rs  parallel.rs  routing.rs
src/coretex_query/: builder.rs  executor.rs  mod.rs  optimizer.rs  planner.rs
src/coretex_security/: auth.rs  encryption.rs  mod.rs  permission.rs  token.rs
src/coretex_storage/: engine.rs  memory.rs  mod.rs  optimized.rs  persistent.rs  tests.rs
src/coretex_storage/cdb/: compression.rs  encryption.rs  format.rs  manifest.rs  mod.rs
src/coretex_utils/: cache.rs  id_generator.rs  logging.rs  metrics.rs  mod.rs  retry.rs  telemetry.rs
src/cortex_backup/: backup.rs  replication.rs  restore.rs
src/cortex_distributed/: cluster.rs
src/cortex_index/: diskann.rs  hnsw.rs  manager.rs  mod.rs
src/cortex_monitor/: alerts.rs  logs.rs  metrics.rs  mod.rs
src/cortex_query/: optimizer.rs
src/cortex_security/: encryption.rs  mod.rs
src/discovery/: consul.rs  etcd.rs  mod.rs
src/distributed/: cluster.rs  metadata.rs  mod.rs  raft.rs  routing.rs  sharding.rs
src/index/: manager.rs  mod.rs
src/index/fulltext/: index.rs  mod.rs  tantivy_index.rs
src/index/graph/: index.rs
src/index/scalar/: btree.rs  hash.rs  mod.rs
src/index/vector/: brute_force.rs  diskann.rs  hnsw.rs  mod.rs
src/query/: ast.rs  executor.rs  jit.rs  mod.rs  operator.rs  optimizer.rs  parser.rs  simd.rs
src/scheduler/: mod.rs  policy.rs  queue.rs  scheduler.rs
src/sharding/: balancer.rs  consistent_hash.rs  mod.rs
src/storage/: mod.rs  postgres_store.rs  redis_queue.rs
src/storage/cache/: lru.rs  mod.rs
src/storage/column/: store.rs
src/storage/lsm/: compaction.rs  memtable.rs  mod.rs  sstable.rs  tree.rs
src/storage/object_store/: adapter.rs  mod.rs  s3_adapter.rs
src/transaction/: consistency.rs  manager.rs  mod.rs  mvcc.rs  wal.rs
src/worker/: executor.rs  heartbeat.rs  mod.rs
tests/chaos/: test_chaos.rs
tests/fuzz/: test_fuzz.rs
tests/integration/: test_integration.rs
tests/performance/: test_performance.rs
tests/property/: test_property.rs
tests/unit/: test_ai.rs  test_api.rs  test_transaction.rs
tools/backup/: backup_tool.rs
tools/benchmark/: benchmark_tool.rs
tools/diagnostic/: diagnostic_tool.rs
tools/migration/: migration_tool.rs
