[package]
name = "cortexdb"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A multimodal vector database for AI applications"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/cortexdb"
repository = "https://github.com/yourusername/cortexdb"
keywords = ["vector-database", "ai", "embedding", "similarity-search"]
categories = ["database", "science", "machine-learning"]

[lib]
name = "cortexdb"
path = "src/lib.rs"

[[bin]]
name = "cortex"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
grpc = ["dep:tonic", "dep:prost", "dep:tonic-build"]
websocket = ["dep:tokio-tungstenite", "dep:futures-channel"]
distributed = ["dep:tokio-stream", "dep:rdkafka"]
full = ["dep:rocksdb", "compression", "metrics", "grpc", "websocket", "distributed"]
compression = ["dep:flate2", "dep:snap"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# Web框架
axum = "0.6"
warp = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "compression-full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 数据库存储
rocksdb = { version = "0.20", features = ["snappy", "lz4", "zstd"], optional = true }

# 向量计算
ndarray = "0.15"
rand = "0.8"
rayon = "1.5"

# 并发和数据结构
dashmap = "5.0"
crossbeam = "0.8"
parking_lot = "0.12"
lru = "0.10"

# 实用工具
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
regex = "1.5"

# 配置管理
config = "0.13"
toml = "0.7"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# 压缩
flate2 = { version = "1.0", optional = true }
snap = { version = "1.0", optional = true }

# 监控指标
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

# Python绑定
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py38"], optional = true }

# gRPC
tonic = { version = "0.9", features = ["tls", "transport", "codegen"], optional = true }
prost = { version = "0.11", optional = true }
tonic-build = { version = "0.9", optional = true }

# 分布式模式
tokio-stream = { version = "0.1", optional = true }
rdkafka = { version = "0.34", features = ["tokio", "ssl"], optional = true }

# WebSocket支持
tokio-tungstenite = { version = "0.19", optional = true }
futures-channel = { version = "0.3", optional = true }

# 安全模块
argon2 = "0.5"
jsonwebtoken = "9.0"
ring = "0.16"

# 实验特性
ndarray-rand = "0.15"
tch = { version = "0.13", optional = true }  # PyTorch绑定，用于联邦学习

[dev-dependencies]
tempfile = "3.0"
rstest = "0.16"
reqwest = "0.11"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'