[package]
name = "cortexdb"
version = "0.2.0"
edition = "2021"
authors = ["CortexDB Team <team@cortexdb.io>"]
description = "Enterprise-grade multimodal vector database for AI applications with distributed clustering, real-time analytics, and enterprise security"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/cortexdb/cortexdb"
repository = "https://github.com/cortexdb/cortexdb"
documentation = "https://docs.cortexdb.io"
keywords = ["vector-database", "ai", "embedding", "similarity-search", "distributed", "ml"]
categories = ["database", "science", "machine-learning", "distributed"]

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[lib]
name = "cortexdb"
path = "src/lib.rs"

[[bin]]
name = "cortex"
path = "src/main.rs"
doc = false

[[bench]]
name = "benches"
path = "benches/main.rs"

[features]
default = ["core", "api", "enterprise-default"]

core = []
api = ["core", "tokio-runtime"]
grpc = ["core", "tonic", "prost", "tonic-build", "tls"]
websocket = ["tokio-runtime", "tokio-tungstenite"]
python = ["core", "pyo3"]
distributed = ["core", "tokio-runtime", "tokio-stream", "raft", "async-trait"]
fulltext = ["tantivy"]
postgres = ["tokio-postgres", "bb8"]
compression = ["flate2", "snap"]
metrics = ["metrics", "metrics-exporter-prometheus"]
monitoring = ["metrics", "tracing"]

tokio-runtime = ["tokio/full"]
tls = ["native-tls"]

enterprise = ["enterprise-default"]
enterprise-default = [
    "ai-enterprise",
    "security-enterprise",
    "optimization-enterprise",
    "support-enterprise"
]

ai-enterprise = [
    "ndarray",
    "rand",
    "rand_distr",
    "rayon",
    "num-traits",
    "wasmer",
    "wasmer-compiler-cranelift",
    "rustacuda",
    "rustacuda-core",
    "ocl"
]

security-enterprise = [
    "oauth2",
    "rusoto_s3",
    "rusoto_core",
    "rusoto_credential",
    "rusoto_sts"
]

optimization-enterprise = [
    "simd-enterprise"
]

support-enterprise = [
    "enterprise-ui",
    "enterprise-console"
]

simd-enterprise = []

enterprise-ui = []
enterprise-console = []

open-source = []
full = ["core", "api", "grpc", "distributed", "fulltext", "postgres", "compression", "metrics", "monitoring", "python"]

[dependencies]

tokio = { version = "1.0", features = ["full"], optional = true }

async-trait = { version = "0.1", optional = true }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
serde_with = "3.0"

thiserror = "1.0"
anyhow = "1.0"

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], optional = true }
tracing-appender = "0.2"

uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "std"] }
lazy_static = "1.4"
regex = "1.5"
dashmap = "6.0"
crossbeam = "0.8"
parking_lot = "0.12"
lru = "0.10"
ahash = "2.0"
parking_lot = "0.12"

config = "0.14"
toml = "0.8"

clap = { version = "4.0", features = ["derive", "env", "string"] }

tokio-postgres = { version = "0.7", optional = true }
bb8 = { version = "0.8", optional = true }
postgres-types = "0.2"

tonic = { version = "0.10", optional = true, features = ["tls", "transport"] }
prost = { version = "0.12", optional = true }
prost-build = { version = "0.12", optional = true }
tonic-build = { version = "0.10", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
futures-channel = { version = "0.3", optional = true }

raft = { version = "0.7", optional = true }
tokio-stream = { version = "0.1", optional = true }

rocksdb = { version = "0.21", features = ["snappy", "lz4", "zstd"], optional = true }

ndarray = { version = "0.16", optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.5", optional = true }
rayon = { version = "1.8", optional = true }
num-traits = { version = "0.2", optional = true }

metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
pyo3-built = { version = "1.0", optional = true }

flate2 = { version = "1.0", optional = true }
snap = { version = "1.0", optional = true }

tantivy = { version = "0.22", optional = true }
unicode-segmentation = { version = "1.10", optional = true }

wasmer = { version = "4.0", optional = true }
wasmer-compiler-cranelift = { version = "4.0", optional = true }
wasmparser = { version = "0.100", optional = true }

rustacuda = { version = "0.1", optional = true }
rustacuda-core = { version = "0.1", optional = true }
ocl = { version = "0.19", optional = true }

rusoto_s3 = { version = "0.48", optional = true }
rusoto_core = { version = "0.48", optional = true }
rusoto_credential = { version = "0.48", optional = true }
rusoto_sts = { version = "0.48", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "native-tls"] }

jsonwebtoken = { version = "9.0", optional = true }
argon2 = { version = "0.5", optional = true }
ring = { version = "0.17", optional = true }
bcrypt = { version = "0.15", optional = true }
oauth2 = { version = "4.4", optional = true }

futures = "0.3"
async-stream = "0.3"
once_cell = "1.18"
dashmap = "6.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["async"] }
proptest = "1.2"
quickcheck = "1.0"
rstest = "0.18"
tokio-test = "0.4"
assertables = "1.0"

[build-dependencies]
prost-build = { version = "0.12", optional = true }
tonic-build = { version = "0.10", optional = true }

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 16

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
opt-level = 3

[workspace]
members = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-verify]
verify = true

[[example]]
name = "basic-usage"
required-features = ["api"]

[[example]]
name = "distributed"
required-features = ["distributed"]

[[example]]
name = "python-integration"
required-features = ["python"]

[[example]]
name = "grpc-server"
required-features = ["grpc"]
